--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "node-sass-chokidar": "0.0.2",
+    "npm-run-all": "^4.0.2",
     "react-scripts": "1.0.7",
     "redux-devtools": "^3.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar src/styles/sass/style.scss -o src/styles/css/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/styles/sass/ -o src/styles/css/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
