--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "immutability-helper": "^2.2.2",
     "node-sass-chokidar": "0.0.2",
     "npm-run-all": "^4.0.2",
     "react-scripts": "1.0.7",
