--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-transition-group": "^1.2.0",
     "redux": "^3.6.0"
   },
   "devDependencies": {
